--- a/frontend/Zephyr/Components/Controls/Feed/PostInput.razor
+++ b/frontend/Zephyr/Components/Controls/Feed/PostInput.razor
@@ -1,8 +1,7 @@
-﻿<div class="col-md-6 col-lg-4 p-3">
-    <RadzenCard>
-        <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Let the world know...</RadzenText>
-        <RadzenTextArea Change=@(args => {}) class="w-100" />
-        <RadzenFileInput @bind-Value=@ImageUrl @bind-FileName=@_fileName @bind-FileSize=@_fileSize TValue="string" class="w-100" 
-                         Change=@(args => {}) />
-    </RadzenCard>
-</div>
+﻿<RadzenCard Style="padding-bottom: 50px;">
+    <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Let the world know...</RadzenText>
+    <RadzenTextArea Change=@(args => {}) class="w-100" />
+    <RadzenFileInput @bind-Value=@ImageUrl @bind-FileName=@_fileName @bind-FileSize=@_fileSize TValue="string" class="w-100" 
+                     Change=@(args => {}) />
+    <RadzenButton Click=@(args => {}) Text="Posten" ButtonStyle="ButtonStyle.Primary" Style="float:right;"/>
+</RadzenCard>
