--- a/frontend/Zephyr/Components/Pages/Home.razor
+++ b/frontend/Zephyr/Components/Pages/Home.razor
@@ -2,8 +2,10 @@
 @using Zephyr.Components.Controls.Feed
 
 <PageTitle>Home</PageTitle>
-<PostInput></PostInput>
-@foreach (var post in _postViewModelList)
-{
-    <PostItem Data="post"></PostItem>
-}
+<div Style="max-width: 600px; background-color: transparent; margin-left:auto; margin-right:auto;">
+    <PostInput></PostInput>
+    @foreach (var post in _postViewModelList)
+    {
+        <PostItem Data="post"></PostItem>
+    }
+</div>
