--- a/frontend/Zephyr/Components/Layout/MainLayout.razor
+++ b/frontend/Zephyr/Components/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
             <RadzenLabel Text="Zephyr"/>
         </RadzenStack>
     </RadzenHeader>
-    <RadzenSidebar @bind-Expanded="@_sidebarExpanded">
+    <RadzenSidebar Expanded="SidebarExpanded" Responsive="false">
         <RadzenPanelMenu>
             <RadzenPanelMenuItem Text="Home" Icon="home" Path=""/>
             <RadzenPanelMenuItem Text="Profile" Icon="account_box" Path=""/>
