--- a/frontend/Zephyr/Components/Pages/Profile.razor
+++ b/frontend/Zephyr/Components/Pages/Profile.razor
@@ -1,3 +1,17 @@
 ﻿@page "/profile/{UserId:int}"
+@using Zephyr.Components.Controls.Feed
 
-<h3>@UserId</h3>
+<div Style="max-width: 600px; background-color: transparent; margin-left:auto; margin-right:auto;">
+    @if (IsLoading)
+    {
+        <p>Loading ...</p>
+    }
+    else
+    {
+        <User UserData="_userViewModel"></User>
+        @foreach (var post in _postViewModelList)
+        {
+            <PostItem Data="post"></PostItem>
+        }
+    }
+</div>
