--- a/frontend/Zephyr/Components/Controls/Feed/PostItem.razor
+++ b/frontend/Zephyr/Components/Controls/Feed/PostItem.razor
@@ -2,6 +2,9 @@
     <RadzenStack Orientation="Orientation.Vertical" JustifyContent="JustifyContent.Center" Gap="1rem" Class="rz-p-4">
         <RadzenText TextStyle="TextStyle.Body1"><b onclick="@NavigateToUser" onmouseover="" style="cursor: pointer;">@Data.User.Name</b></RadzenText>
         <RadzenText TextStyle="TextStyle.Overline"><b>@Data.Text</b></RadzenText>
-        <RadzenImage Path="@Data.ImageUrl" Style="width: 400px; height: 400px; margin-left:auto; margin-right:auto;"/>
+        @if (Data.ImageUrl != null)
+        {
+            <RadzenImage Path="@Data.ImageUrl" Style="width: 400px; height: 400px; margin-left:auto; margin-right:auto;"/>
+        }
     </RadzenStack>
 </RadzenCard>
