Added Basic Login and Signup Elements

--- a/frontend/Zephyr/Components/Layout/MainLayout.razor
+++ b/frontend/Zephyr/Components/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
     <RadzenSidebar Expanded="SidebarExpanded" Responsive="false">
         <RadzenPanelMenu>
             <RadzenPanelMenuItem Text="Home" Icon="home" Path=""/>
-            <RadzenPanelMenuItem Text="Profile" Icon="account_box" Path=""/>
+            <RadzenPanelMenuItem Text="Profile" Icon="account_box" Path="signin"/>
         </RadzenPanelMenu>
     </RadzenSidebar>
     <RadzenBody>
