--- a/frontend/Zephyr/Components/Controls/UserManagement/Login.razor
+++ b/frontend/Zephyr/Components/Controls/UserManagement/Login.razor
@@ -1,5 +1,5 @@
 ﻿<RadzenCard class="rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12" style="max-width: 600px;">
     <RadzenTemplateForm Data=@("LoginWithRegister")>
-        <RadzenLogin AllowResetPassword="false" Login="() => { }" Register="OnRegisterClick" />
+        <RadzenLogin AllowResetPassword="false" Login="OnLoginClick" Register="OnRegisterClick"/>
     </RadzenTemplateForm>
 </RadzenCard>
