Changed Ids to Guids, added Converter

--- a/frontend/Zephyr/Components/Pages/Profile.razor
+++ b/frontend/Zephyr/Components/Pages/Profile.razor
@@ -1,4 +1,4 @@
-﻿@page "/profile/{UserId:int}"
+﻿@page "/profile/{UserId:Guid}"
 @using Zephyr.Components.Controls.Feed
 
 <div Style="max-width: 600px; background-color: transparent; margin-left:auto; margin-right:auto;">
