Added Logout functionality

--- a/frontend/Zephyr/Components/Layout/MainLayout.razor
+++ b/frontend/Zephyr/Components/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
             @if (UserLoggedIn)
             {
                 <RadzenPanelMenuItem Text="@UserName" Icon="account_box" Path="@UserPath" />
-                <RadzenPanelMenuItem Text="Log out" Path="logout" />
+                <RadzenPanelMenuItem Text="Log out" Path="logout" Icon="input" />
             }
             else
             {
