--- a/frontend/Zephyr/Components/Controls/Feed/PostInput.razor
+++ b/frontend/Zephyr/Components/Controls/Feed/PostInput.razor
@@ -2,5 +2,5 @@
     <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Let the world know...</RadzenText>
     <RadzenTextArea Style="max-height: 400px; min-height: 150px;" MaxLength=256 @bind-Value="@Text" class="w-100" />
     <RadzenFileInput @bind-Value=@ImageUrl TValue="string" class="w-100"/>
-    <RadzenButton Click="OnPost" Text="Posten" ButtonStyle="ButtonStyle.Primary" Style="float:right; margin-top: 10px;" />
+    <RadzenButton Click="OnPost" Text="Post" ButtonStyle="ButtonStyle.Primary" Style="float:right; margin-top: 10px;" IsBusy="IsBusy" />
 </RadzenCard>
